-XX:AppendRatio=N not supported

XMLWordPrintable

    • b03
    • x86
    • linux
    • Verified

        FULL PRODUCT VERSION :
        java version "1.6.0_10-beta"
        Java(TM) SE Runtime Environment (build 1.6.0_10-beta-b25)
        Java HotSpot(TM) Server VM (build 11.0-b12, mixed mode)

        ADDITIONAL OS VERSION INFORMATION :
        Linux host 2.6.5-7.257-smp #1 SMP Mon May 15 14:14:14 UTC 2006 x86_64 x86_64 x86_64 GNU/Linux

        A DESCRIPTION OF THE PROBLEM :
        Starting java VM with I get an -XX:AppendRatio=3

        Unrecognized VM option 'AppendRatio=3'

        On#

        java version "1.6.0_06"
        Java(TM) SE Runtime Environment (build 1.6.0_06-b02)
        Java HotSpot(TM) Server VM (build 10.0-b22, mixed mode)

        it worked.

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Call "java AppendRatio=3"

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        VM starting and stays running.
        ACTUAL -
        VM stops with "Unrecognized VM option 'AppendRatio=3'"

        ERROR MESSAGES/STACK TRACES THAT OCCUR :
        Unrecognized VM option 'AppendRatio=3'

        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        Not needed
        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        Start without this option, but how about more fair monitor, that are needed by the application.

        Release Regression From : 6u6
        The above release value was the last known release where this
        bug was not reproducible. Since then there has been a regression.

        Release Regression From : 6u6
        The above release value was the last known release where this
        bug was not reproducible. Since then there has been a regression.

              Assignee:
              Keith Mcguigan (Inactive)
              Reporter:
              Nelson Dcosta (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: